--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .logo-inner a {
   color: #000000;
   font-size: 24px;
@@ -212,10 +211,8 @@
   object-fit: cover;
 }
 
-
-
 .comment-form {
-  background-color: #F9F9FF;
+  background-color: #f9f9ff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -239,7 +236,7 @@
   color: #666;
 }
 
-.form-group input, 
+.form-group input,
 .form-group textarea {
   width: calc(100% - 20px);
   padding: 10px;
@@ -274,7 +271,7 @@
   left: calc(100% - 200px);
 }
 
-.blog-post-area.section-gap{
+.blog-post-area.section-gap {
   padding: 40px;
 }
 
@@ -283,11 +280,23 @@
 }
 
 .header-top .active::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -10px; /* This creates the 20px gap */
   left: 0;
   width: 100%;
   height: 2px; /* Thickness of the underline */
   background-color: currentColor; /* Same color as the text */
+}
+
+.blog-post-area.section-gap {
+  padding-top: 140px !important;
+}
+
+.section_image {
+  background: #f4f4f4;
+  padding: 20px 0 1px 0;
+}
+.widget-wrap .single-sidebar-widget {
+  padding: 20px;
 }
